# MLB

./: 1_EDA.Rmd  1_EDA.nb.html  2_Feature_Engineering.Rmd  2_Feature_Engineering.knit.md  2_Feature_Engineering.nb.html
data/: TMP_GL.csv
data/game_log/: GL2016.csv  GL2017.csv
scripts/: formatGameLog.py
scripts/src/: CMakeLists.txt  FormatGameLog.cpp
